--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,6 +1,6 @@
 div {
-    background-color: "red";
-    color: "white";
+    background-color: red;
+    color: white;
     font-size: 32px;
     font-weight: 700;
     text-align: center;
