--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,5 +1,20 @@
 .odd {
-    background-color: rgb(234, 132, 145);
+    background-color: rgb(255, 182, 193);
     font-family: Verdana, "DejaVu Sans", sans-serif;
 
+}
+
+.common-font-size {
+    font-size: 24px;
+}
+
+#num2 {
+    color: #0000ff;
+    font-size: 36px;
+}
+
+
+#num4 {
+    background-color: hsl(120, 73%, 75%);
+    font-weight: 700;
 }
