--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -8,8 +9,21 @@ img {
 }
 
 .title {
+  display: flex;
   font-size: 36px;
   font-weight: 900;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.info {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.chilli, .barberry, .pepper, .saffron {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
